--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -12,6 +12,7 @@
         MEMEZR
         <i>α</i>
     </header>
+
     <div id="container"></div>
 
     <div id="done" class="bottom">
@@ -46,6 +47,7 @@
         </span>
     </script>
     <script src="js/vendor.js"></script>
+    <script>var memeJson = {{{data}}}</script>
     <script src="js/app.js"></script>
 
     <!-- Yandex.Metrika counter --><script type="text/javascript">(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter30571517 = new Ya.Metrika({id:30571517, webvisor:true, clickmap:true, trackLinks:true, accurateTrackBounce:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/30571517" style="position:absolute; left:-9999px;" alt="" /></div></noscript><!-- /Yandex.Metrika counter -->
