--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -13,6 +13,12 @@
         <i>α</i>
     </header>
 
+    <nav>
+        {{#each menu}}
+        <a href="{{uri}}" {{#if current}}class="current"{{/if}}>{{name}}</a>
+        {{/each}}
+    </nav>
+
     <div id="container"></div>
 
     <div id="done" class="bottom">
