--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -5,6 +5,7 @@
     <title>Memezr: create meme online</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
 </head>
 
 <body>
